rename extensions resources of .php to .twig

--- a/app/recursos/componentes/drawers.twig
+++ b/app/recursos/componentes/drawers.twig
@@ -1,4 +1,4 @@
 <!--begin::Drawers-->
-<?php include 'drawers/activity.php'; ?>
-<?php include 'drawers/chat.php'; ?>
+<?php include 'drawers/activity.twig'; ?>
+<?php include 'drawers/chat.twig'; ?>
 <!--end::Drawers-->
