--- a/app/recursos/componentes/topbar.twig
+++ b/app/recursos/componentes/topbar.twig
@@ -19,7 +19,7 @@
 	<div class="topbar-item px-3 px-lg-5 position-relative" data-kt-menu-trigger="click" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end" data-kt-menu-flip="bottom">
 		<i class="bi bi-app-indicator fs-3"></i>
 	</div>
-	<?php include 'topbar/notificaciones.php'; ?> 
+	<?php include 'topbar/notificaciones.twig'; ?>
 	<!--end::Menu wrapper--></div>
 	<!--end::Notifications-->
 	<!--begin::Chat-->
@@ -38,12 +38,12 @@
 	<div class="topbar-item px-3 px-lg-5" data-kt-menu-trigger="click" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end" data-kt-menu-flip="bottom">
 		<i class="bi bi-bar-chart fs-3"></i>
 	</div>
-	<?php include 'topbar/quicklinks.php'; ?> 
+	<?php include 'topbar/quicklinks.twig'; ?>
 	<!--end::Menu wrapper--></div>
 	<!--end::Quick links-->
 	<!--begin::Theme mode-->
 	<div class="d-flex align-items-center">
-	<?php include 'topbar/main.php'; ?></div>
+	<?php include 'topbar/main.twig'; ?></div>
 	<!--end::Theme mode-->
 	<!--begin::User-->
 	<div class="d-flex align-items-stretch" id="kt_header_user_menu_toggle">
@@ -51,7 +51,7 @@
 	<div class="topbar-item cursor-pointer symbol px-3 px-lg-5 me-n3 me-lg-n5 symbol-30px symbol-md-35px" data-kt-menu-trigger="click" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end" data-kt-menu-flip="bottom">
 		<img src="assets/media/avatars/300-1.jpg" alt="metronic" />
 	</div>
-	<?php include 'topbar/usuario.php'; ?>
+	<?php include 'topbar/usuario.twig'; ?>
 	<!--end::Menu wrapper--></div>
 	<!--end::User -->
 	<!--begin::Heaeder menu toggle-->
