--- a/app/recursos/componentes/plantilla.twig
+++ b/app/recursos/componentes/plantilla.twig
@@ -32,10 +32,12 @@
 
 <body data-kt-name="metronic" id="kt_body" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed toolbar-tablet-and-mobile-fixed aside-enabled aside-fixed" style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">
 
+</body>
+
 
     <?php
-    include 'master.php';
-    include 'drawers.php';
+    include 'master.twig';
+    include 'drawers.twig';
     
     ?>
     <!--end::Modals-->
