--- a/app/recursos/plantillas/master.twig
+++ b/app/recursos/plantillas/master.twig
@@ -4,11 +4,11 @@
 	<!--begin::Page-->
 	<div class="page d-flex flex-row flex-column-fluid">
 
-		<?php include 'lateral.php'; ?>
+		<?php include 'lateral.twig'; ?>
 
 		<!--begin::Wrapper-->
 		<div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper">
-			<?php include 'cabecera.php'; ?>
+			<?php include 'cabecera.twig'; ?>
 			<!--begin::Content-->
 			<div class="content d-flex flex-column flex-column-fluid" id="kt_content">
 				<!--begin::Post-->
@@ -36,7 +36,7 @@
 			</div>
 			<!--end::Content-->
 
-			<?php include 'pie.php'; ?>
+			<?php include 'pie.twig'; ?>
 
 		</div>
 		<!--end::Wrapper-->
