Modificacion de la estructura de vistas y componentes

--- a/app/recursos/vistas/componentes/plantilla.twig
+++ b/app/recursos/vistas/componentes/plantilla.twig
@@ -3,7 +3,6 @@
 <!--begin::Head-->
 
 <head>
-    <base href="" />
     <title>TiHouse</title>
     <meta charset="utf-8" />
     <meta name="description" content="TiHouse" />
@@ -35,7 +34,8 @@
         data-kt-name="metronic"
         id="kt_body"
         class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed toolbar-tablet-and-mobile-fixed aside-enabled aside-fixed"
-        style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px">
+        style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px"
+>
 
     {% block contenido %}
     {% endblock %}
