--- a/app/recursos/vistas/componentes/cabecera.twig
+++ b/app/recursos/vistas/componentes/cabecera.twig
@@ -12,7 +12,7 @@
 		<!--begin::Mobile logo-->
 		<div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0">
 			<a href="?page=index" class="d-lg-none">
-				<img alt="Logo" src="assets/media/logos/demo13-small.svg" class="h-25px" />
+				<img alt="Logo" src="../../assets/media/logos/demo13-small.svg" class="h-25px" />
 			</a>
 		</div>
 		<!--end::Mobile logo-->
