--- a/app/recursos/vistas/componentes/plantilla.twig
+++ b/app/recursos/vistas/componentes/plantilla.twig
@@ -36,9 +36,38 @@
         class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled toolbar-fixed toolbar-tablet-and-mobile-fixed aside-enabled aside-fixed"
         style="--kt-toolbar-height:55px;--kt-toolbar-height-tablet-and-mobile:55px"
 >
+    <!--begin::Main-->
+    <!--begin::Root-->
+    <div class="d-flex flex-column flex-root">
+        <!--begin::Page-->
+        <div class="page d-flex flex-row flex-column-fluid">
 
-    {% block contenido %}
-    {% endblock %}
+            {% include './componentes/lateral.twig' %}
+
+            <!--begin::Wrapper-->
+            <div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper">
+                {% include './componentes/cabecera.twig' %}
+
+                <!--begin::Content-->
+                <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+                    <!--begin::Post-->
+                    <div class="post d-flex flex-column-fluid" id="kt_post">
+                        {% block contenido %}
+                        {% endblock %}
+                    </div>
+                    <!--end::Post-->
+                </div>
+                <!--end::Content-->
+
+                {% include './componentes/pie.twig' %}
+
+            </div>
+            <!--end::Wrapper-->
+        </div>
+        <!--end::Page-->
+    </div>
+    <!--end::Root-->
+
 
     <!--begin::Javascript-->
     <script>
