fit routes of assets

--- a/app/recursos/vistas/componentes/drawers/chat.twig
+++ b/app/recursos/vistas/componentes/drawers/chat.twig
@@ -108,7 +108,7 @@
 						<div class="d-flex align-items-center mb-2">
 							<!--begin::Avatar-->
 							<div class="symbol symbol-35px symbol-circle">
-								<img alt="Pic" src="assets/media/avatars/300-25.jpg" />
+								<img alt="Pic" src="../../../assets/media/avatars/300-25.jpg" />
 							</div>
 							<!--end::Avatar-->
 							<!--begin::Details-->
