--- a/app/recursos/vistas/componentes/topbar.twig
+++ b/app/recursos/vistas/componentes/topbar.twig
@@ -49,7 +49,7 @@
 	<div class="d-flex align-items-stretch" id="kt_header_user_menu_toggle">
 	<!--begin::Menu wrapper-->
 	<div class="topbar-item cursor-pointer symbol px-3 px-lg-5 me-n3 me-lg-n5 symbol-30px symbol-md-35px" data-kt-menu-trigger="click" data-kt-menu-attach="parent" data-kt-menu-placement="bottom-end" data-kt-menu-flip="bottom">
-		<img src="assets/media/avatars/300-1.jpg" alt="metronic" />
+		<img src="../../assets/media/avatars/300-1.jpg" alt="metronic" />
 	</div>
 	<?php include 'topbar/usuario.twig'; ?>
 	<!--end::Menu wrapper--></div>
