--- a/app/recursos/vistas/componentes/drawers/activity.twig
+++ b/app/recursos/vistas/componentes/drawers/activity.twig
@@ -57,7 +57,7 @@
 									<!--end::Info-->
 									<!--begin::User-->
 									<div class="symbol symbol-circle symbol-25px" data-bs-toggle="tooltip" data-bs-boundary="window" data-bs-placement="top" title="Nina Nilson">
-										<img src="assets/media/avatars/300-14.jpg" alt="img" />
+										<img src="../../../assets/media/avatars/300-14.jpg" alt="img" />
 									</div>
 									<!--end::User-->
 								</div>
@@ -80,12 +80,12 @@
 									<div class="symbol-group symbol-hover flex-nowrap flex-grow-1 min-w-100px pe-2">
 										<!--begin::User-->
 										<div class="symbol symbol-circle symbol-25px">
-											<img src="assets/media/avatars/300-2.jpg" alt="img" />
+											<img src="../../../assets/media/avatars/300-2.jpg" alt="img" />
 										</div>
 										<!--end::User-->
 										<!--begin::User-->
 										<div class="symbol symbol-circle symbol-25px">
-											<img src="assets/media/avatars/300-14.jpg" alt="img" />
+											<img src="../../../assets/media/avatars/300-14.jpg" alt="img" />
 										</div>
 										<!--end::User-->
 										<!--begin::User-->
@@ -119,7 +119,7 @@
 									<div class="symbol-group symbol-hover flex-nowrap flex-grow-1 min-w-100px">
 										<!--begin::User-->
 										<div class="symbol symbol-circle symbol-25px">
-											<img src="assets/media/avatars/300-20.jpg" alt="img" />
+											<img src="../../../assets/media/avatars/300-20.jpg" alt="img" />
 										</div>
 										<!--end::User-->
 										<!--begin::User-->
@@ -178,7 +178,7 @@
 									<!--end::Info-->
 									<!--begin::User-->
 									<div class="symbol symbol-circle symbol-25px" data-bs-toggle="tooltip" data-bs-boundary="window" data-bs-placement="top" title="Alan Nilson">
-										<img src="assets/media/avatars/300-1.jpg" alt="img" />
+										<img src="../../../assets/media/avatars/300-1.jpg" alt="img" />
 									</div>
 									<!--end::User-->
 								</div>
@@ -222,7 +222,7 @@
 									<!--end::Info-->
 									<!--begin::User-->
 									<div class="symbol symbol-circle symbol-25px" data-bs-toggle="tooltip" data-bs-boundary="window" data-bs-placement="top" title="Jan Hummer">
-										<img src="assets/media/avatars/300-23.jpg" alt="img" />
+										<img src="../../../assets/media/avatars/300-23.jpg" alt="img" />
 									</div>
 									<!--end::User-->
 								</div>
@@ -235,7 +235,7 @@
 									<!--begin::Item-->
 									<div class="d-flex flex-aligns-center pe-10 pe-lg-20">
 										<!--begin::Icon-->
-										<img alt="" class="w-30px me-3" src="assets/media/svg/files/pdf.svg" />
+										<img alt="" class="w-30px me-3" src="../../../assets/media/svg/files/pdf.svg" />
 										<!--end::Icon-->
 										<!--begin::Info-->
 										<div class="ms-1 fw-semibold">
@@ -252,7 +252,7 @@
 									<!--begin::Item-->
 									<div class="d-flex flex-aligns-center pe-10 pe-lg-20">
 										<!--begin::Icon-->
-										<img alt="?page=apps/projects/project" class="w-30px me-3" src="assets/media/svg/files/doc.svg" />
+										<img alt="?page=apps/projects/project" class="w-30px me-3" src="../../../assets/media/svg/files/doc.svg" />
 										<!--end::Icon-->
 										<!--begin::Info-->
 										<div class="ms-1 fw-semibold">
@@ -269,7 +269,7 @@
 									<!--begin::Item-->
 									<div class="d-flex flex-aligns-center">
 										<!--begin::Icon-->
-										<img alt="?page=apps/projects/project" class="w-30px me-3" src="assets/media/svg/files/css.svg" />
+										<img alt="?page=apps/projects/project" class="w-30px me-3" src="../../../assets/media/svg/files/css.svg" />
 										<!--end::Icon-->
 										<!--begin::Info-->
 										<div class="ms-1 fw-semibold">
@@ -325,7 +325,7 @@
 									<!--end::Info-->
 									<!--begin::User-->
 									<div class="symbol symbol-circle symbol-25px" data-bs-toggle="tooltip" data-bs-boundary="window" data-bs-placement="top" title="Nina Nilson">
-										<img src="assets/media/avatars/300-14.jpg" alt="img" />
+										<img src="../../../assets/media/avatars/300-14.jpg" alt="img" />
 									</div>
 									<!--end::User-->
 								</div>
@@ -369,7 +369,7 @@
 									<!--end::Info-->
 									<!--begin::User-->
 									<div class="symbol symbol-circle symbol-25px" data-bs-toggle="tooltip" data-bs-boundary="window" data-bs-placement="top" title="Marcus Dotson">
-										<img src="assets/media/avatars/300-2.jpg" alt="img" />
+										<img src="../../../assets/media/avatars/300-2.jpg" alt="img" />
 									</div>
 									<!--end::User-->
 								</div>
@@ -383,7 +383,7 @@
 									<div class="overlay me-10">
 										<!--begin::Image-->
 										<div class="overlay-wrapper">
-											<img alt="img" class="rounded w-150px" src="assets/media/stock/600x400/img-29.jpg" />
+											<img alt="img" class="rounded w-150px" src="../../../assets/media/stock/600x400/img-29.jpg" />
 										</div>
 										<!--end::Image-->
 										<!--begin::Link-->
@@ -397,7 +397,7 @@
 									<div class="overlay me-10">
 										<!--begin::Image-->
 										<div class="overlay-wrapper">
-											<img alt="img" class="rounded w-150px" src="assets/media/stock/600x400/img-31.jpg" />
+											<img alt="img" class="rounded w-150px" src="../../../assets/media/stock/600x400/img-31.jpg" />
 										</div>
 										<!--end::Image-->
 										<!--begin::Link-->
@@ -411,7 +411,7 @@
 									<div class="overlay">
 										<!--begin::Image-->
 										<div class="overlay-wrapper">
-											<img alt="img" class="rounded w-150px" src="assets/media/stock/600x400/img-40.jpg" />
+											<img alt="img" class="rounded w-150px" src="../../../assets/media/stock/600x400/img-40.jpg" />
 										</div>
 										<!--end::Image-->
 										<!--begin::Link-->
@@ -508,7 +508,7 @@
 									<!--end::Info-->
 									<!--begin::User-->
 									<div class="symbol symbol-circle symbol-25px" data-bs-toggle="tooltip" data-bs-boundary="window" data-bs-placement="top" title="Robert Rich">
-										<img src="assets/media/avatars/300-4.jpg" alt="img" />
+										<img src="../../../assets/media/avatars/300-4.jpg" alt="img" />
 									</div>
 									<!--end::User-->
 								</div>
