--- a/app/recursos/vistas/componentes/lateral.twig
+++ b/app/recursos/vistas/componentes/lateral.twig
@@ -4,7 +4,7 @@
 	<div class="aside-logo flex-column-auto" id="kt_aside_logo">
 		<!--begin::Logo-->
 		<a href="?page=index">
-			<img alt="Logo" src="assets/media/logos/demo13.svg" class="h-15px logo" />
+			<img alt="Logo" src="../../assets/media/logos/demo13.svg" class="h-15px logo" />
 		</a>
 		<!--end::Logo-->
 		<!--begin::Aside toggler-->
